update .gitignore, music

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,14 @@ rails
 rake
 sprockets
 thor
+commonmarker
+gemoji
+github-pages
+jekyll
+kramdown
+launch
+rougify
+safe_yaml
+sass
+sass-convert
+scss
